# AgentBench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: build.sh  go.Dockerfile  multi.Dockerfile  node.Dockerfile  python.Dockerfile
docs/: adapters.md  design.md  failure-taxonomy.md  task-authoring.md
examples/: experiment.yaml
experiments/: example-comparison.yaml
scripts/: prerelease_check.sh  validate_tasks.py
src/agentbench/: __init__.py
src/agentbench/adapters/: __init__.py  anthropic_api.py  base.py  claude_code.py  mock.py  registry.py
src/agentbench/classification/: __init__.py  classifier.py  taxonomy.py
src/agentbench/cli/: __init__.py  main.py
src/agentbench/core/: __init__.py  config.py  experiment.py  models.py  (+4 more)
tasks/: README.md  calibration.json
tasks/.suites/: quick-v1.yaml  standard-v1.yaml
tasks/adv-misleading-error-location/: task.yaml
tasks/adv-off-by-one-specific-input/: task.yaml
tasks/calc-fix-division-by-zero/: task.yaml
tasks/flask-add-health-endpoint/: task.yaml
tasks/go-add-error-wrapping/: task.yaml
tasks/go-fix-goroutine-leak/: task.yaml
tasks/go-fix-nil-pointer-deref/: task.yaml
tasks/go-multi-add-http-middleware/: task.yaml
tasks/js-add-error-handling/: task.yaml
tasks/js-add-input-validation/: task.yaml
tasks/js-add-jwt-middleware/: task.yaml
tasks/js-fix-async-await-order/: task.yaml
tasks/js-fix-promise-rejection/: task.yaml
tasks/js-fix-undefined-property/: task.yaml
tasks/js-multi-add-feature-flags/: task.yaml
tasks/js-refactor-callbacks-to-promises/: task.yaml
tasks/js-test-gen-rest-api/: task.yaml
tasks/my-js-task/: task.yaml
tasks/my-test-task/: task.yaml
tasks/node-api-add-validation/: package-lock.json  task.yaml
tasks/py-add-auth-middleware/: task.yaml
tasks/py-add-csv-export/: task.yaml
tasks/py-add-default-parameter/: task.yaml
tasks/py-add-lru-cache-impl/: task.yaml
tasks/py-add-retry-logic/: task.yaml
tasks/py-debug-from-logs/: task.yaml
tasks/py-expert-async-pipeline/: task.yaml
tasks/py-expert-concurrent-queue/: task.yaml
tasks/py-expert-debug-memory-leak/: task.yaml
tasks/py-expert-plugin-framework/: task.yaml
tasks/py-fix-circular-import/: task.yaml
tasks/py-fix-datetime-timezone/: task.yaml
tasks/py-fix-empty-list-index/: task.yaml
tasks/py-fix-generator-exhaustion/: task.yaml
tasks/py-fix-mutable-default-arg/: task.yaml
tasks/py-fix-none-attribute/: task.yaml
tasks/py-fix-off-by-one-loop/: task.yaml
tasks/py-fix-race-condition/: task.yaml
tasks/py-multi-add-model-routes/: task.yaml
tasks/py-multi-rename-module/: task.yaml
tasks/py-refactor-async-callbacks/: task.yaml
tasks/py-refactor-class-to-dataclass/: task.yaml
tasks/py-refactor-remove-duplication/: task.yaml
tasks/py-refactor-split-large-class/: task.yaml
tasks/py-test-gen-complex-parser/: task.yaml
tasks/py-test-gen-stack/: task.yaml
tasks/py-test-gen-string-utils/: task.yaml
tasks/refactor-extract-config/: task.yaml
tasks/rust-add-option-handling/: task.yaml
tasks/rust-fix-integer-overflow/: task.yaml
tasks/todo-api-fix-delete-bug/: task.yaml
tasks/ts-expert-type-system-refactor/: task.yaml
tasks/ts-refactor-strict-types/: task.yaml
tests/: conftest.py  test_adapters.py  test_classifier.py  test_claude_code_adapter.py  test_cli.py  test_e2e.py  test_models.py  test_orchestrator.py  test_reporting.py  test_sandbox.py  test_scoring.py  test_seed_tasks.py  test_task_tooling.py  test_trace.py
tests/test_reporting/: test_comparison.py  test_markdown.py  test_terminal.py  test_trace_viewer.py
(+235 files in other folders)
